# two-brain-studio

./: .gitignore  README.md  launch.bat  pyproject.toml
src/scorerift_studio/: __init__.py  __main__.py  app.py  engine_manager.py  server.py  state.py  ui.py
src/two_brain_studio/: __init__.py  __main__.py  app.py  engine_manager.py  server.py  state.py  ui.py
tests/: test_engine_manager.py  test_server.py  test_state.py
