[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "two-brain-studio"
version = "0.2.0"
description = "Desktop GUI for two-brain-audit — configure, run, and review audits without the CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Max" },
]
keywords = ["audit", "gui", "desktop", "code-quality", "two-brain-audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "two-brain-audit>=0.2.0",
    "flask>=3.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
two-brain-studio = "two_brain_studio.app:main"

[project.urls]
Homepage = "https://github.com/SwiftWing21/two-brain-studio"
Repository = "https://github.com/SwiftWing21/two-brain-studio"
Issues = "https://github.com/SwiftWing21/two-brain-studio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/two_brain_studio"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
