[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scorerift-studio"
version = "0.2.0"
description = "Desktop GUI for ScoreRift — configure, run, and review audits without the CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Max" },
]
keywords = ["scoring", "gui", "desktop", "code-quality", "scorerift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "scorerift>=2.0.0",
    "flask>=3.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
scorerift-studio = "scorerift_studio.app:main"

[project.urls]
Homepage = "https://github.com/SwiftWing21/scorerift-studio"
Repository = "https://github.com/SwiftWing21/scorerift-studio"
Issues = "https://github.com/SwiftWing21/scorerift-studio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scorerift_studio"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
